# framez

framez/: Cargo.toml
framez-demo/: Cargo.toml
framez/examples/esp32c3/async-uart/: Cargo.toml  cspell.json
framez/examples/esp32c3/async-uart/.cargo/: config.toml
framez/src/: mock.rs
framez/src/codec/: delimiter.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs  encode.rs  send_receive.rs
