[package]
name = "framez-demo"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
framez = { path = "../framez" }
tokio = { version = "1", features = ["full"] }
embedded-io-adapters = { version = "0.7", default-features = false, features = [
    "tokio-1",
] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
heapless = { version = "0.8", default-features = false, features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
zerocopy = { version = "0.8", features = ["derive"] }
serde-json-core = { version = "0.6" }
crc32fast = { version = "1", default-features = false }
derive_more = { version = "2", default-features = false, features = ["from"] }

[[example]]
name = "zerocopy-demo"
path = "examples/zerocopy-demo.rs"
required-features = []
