[package]
name = "framez"
version = "0.4.0"
edition = "2024"
rust-version = "1.85.1"
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "A zerocopy codec for encoding and decoding data in no_std environments."
repository = "https://github.com/zealloc/framez"
keywords = ["codec", "no_std", "embedded", "encode", "decode"]

[features]
default = ["char-fmt"]
log = ["dep:log"]
tracing = ["dep:tracing"]
defmt = ["dep:defmt"]
pretty-hex-fmt = []
char-fmt = []

[dependencies]
embedded-io-async = { version = "0.7", default-features = false }
futures = { version = "0.3", default-features = false }
log = { version = "0.4", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, optional = true }
defmt = { version = "1", default-features = false, optional = true }

[dev-dependencies]
embedded-io-adapters = { version = "0.7", default-features = false, features = [
    "tokio-1",
] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "echo"
path = "examples/echo.rs"
required-features = []

[[example]]
name = "zerocopy"
path = "examples/zerocopy.rs"
required-features = []

[[example]]
name = "stream"
path = "examples/stream.rs"
required-features = []
