[package]
name = "framez-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.12"
tokio = { version = "1", features = ["full"] }
embedded-io-adapters = { version = "0.7", default-features = false, features = [
    "tokio-1",
] }
heapless = { version = "0.8", default-features = false }
framez = { path = "../framez", default-features = false }
arbitrary = "1"

[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false

[[bin]]
name = "encode"
path = "fuzz_targets/encode.rs"
test = false
doc = false


[[bin]]
name = "receive"
path = "fuzz_targets/receive.rs"
test = false
doc = false

[[bin]]
name = "send_receive"
path = "fuzz_targets/send_receive.rs"
test = false
doc = false
